--- a/01_materials/labs/01_setup.ipynb
+++ b/01_materials/labs/01_setup.ipynb
@@ -306,29 +306,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#below will load the file\n",
+    "# make sure to select the kernel then load environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%load_ext dotenv\n",
     "%dotenv "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../../05_src/data/tickers/sp500_wiki.csv'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../05_src\")"
+    "# environment is available\n",
+    "import os\n",
+    "os.getenv('TICKERS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from logger import get_logger\n",
+    "import sys\n",
+    "sys.path.append(\"../../05_src\")\n",
+    "# append a file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from logger import get_logger\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-23 19:56:49,309, 1274725804.py, 6, INFO, Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# call name of the calling handle\n",
+    "# module being called\n",
+    "# if _ comes first, usually means its private within the module\n",
+    "# initiate the logs variable\n",
     "_logs = get_logger(__name__)\n",
-    "_logs.info(\"Hello world!\")"
+    "_logs.info(\"Hello world!\")\n",
+    "\n",
+    "# after running, check under 07_logs\n",
+    "# has information about the line we just ran with Hello World\n",
+    "# the number is the line"
    ]
   },
   {
@@ -425,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
